# PowerLib

./: .gitignore  .gitmodules  CMakeLists.txt  SConscript  get-deps.sh  stringVector.h  vector.c  vector.h
headers/cPowers/: linkedList.h  malloc.h  stringVector.h  systemError.h  types.h  vector.h
src/: linkedList.c  linkedList.h  malloc.c  stringVector.c  systemError.c  vector.c  vector.h
test/: linkedListTests.cpp  stringTests.cpp  vectorTests.cpp
